--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       background: #111;
       border-radius: 20px;
       overflow: hidden;
+      user-select: none;
     }
 
     .block {
@@ -42,6 +43,10 @@
       position: absolute;
       border-radius: 10px;
       cursor: pointer;
+      transition: transform 0.2s ease;
+    }
+    .block:hover {
+      transform: scale(1.1);
     }
 
     .gray { background: gray; }
@@ -98,6 +103,7 @@
       font-size: 5rem;
       font-weight: bold;
       margin-top: 2rem;
+      user-select: none;
     }
   </style>
 </head>
@@ -136,7 +142,7 @@
     <div id="countdown"></div>
     <div id="gameArea"></div>
     <div class="topbar">
-      <button class="link-btn" onclick="endGame()">🏠 Quitter</button>
+      <button class="link-btn" onclick="endGame('Tu as quitté la partie.')">🏠 Quitter</button>
     </div>
   </div>
 
@@ -166,18 +172,20 @@
   <script>
     const pages = ["home", "ready", "game", "shop", "profile"];
     const colors = ['red', 'blue', 'green', 'yellow'];
-    const difficulties = { easy: 3000, medium: 1500, impossible: 800 };
-    let gameTimer, currentBlock, selectedDifficulty = "easy";
+    const difficulties = { easy: 5000, medium: 3000, impossible: 1500 };
+    let gameTimer = null, currentBlock = null, selectedDifficulty = "easy";
     let trophies = parseInt(localStorage.getItem("trophies") || "0");
     let lives = parseInt(localStorage.getItem("lives") || "3");
     let multiplier = parseInt(localStorage.getItem("multiplier") || "1");
     let score = 0;
+    let gameRunning = false;
 
     function showPage(id) {
       pages.forEach(p => document.getElementById(p).classList.remove("active"));
       document.getElementById(id).classList.add("active");
       if (id === 'profile') updateProfile();
       if (id === 'shop') updateShop();
+      if (id === 'game') updateUI();
     }
 
     function chooseDifficulty(diff) {
@@ -195,6 +203,8 @@
     function spawnBlock(speed) {
       const gameArea = document.getElementById("gameArea");
       gameArea.innerHTML = "";
+      if (!gameRunning) return;
+
       const block = document.createElement("div");
       const isGray = Math.random() < 0.2;
       block.className = "block " + (isGray ? "gray" : colors[Math.floor(Math.random() * colors.length)]);
@@ -202,7 +212,13 @@
       block.style.left = Math.random() * (gameArea.clientWidth - 60) + "px";
 
       block.onclick = () => {
-        if (isGray) return endGame("Tu as cliqué un bloc gris !");
+        if (!gameRunning) return;
+        if (isGray) {
+          gameRunning = false;
+          endGame("Tu as cliqué un bloc gris !");
+          return;
+        }
+        // Cliquer sur bloc coloré :
         trophies += multiplier;
         score++;
         saveState();
@@ -215,27 +231,37 @@
       currentBlock = block;
 
       gameTimer = setTimeout(() => {
+        if (!gameRunning) return;
+        // Si bloc coloré non cliqué, perte de vie
         if (!isGray) {
           lives--;
-          if (lives <= 0) return endGame("Tu as perdu toutes tes vies !");
+          if (lives <= 0) {
+            gameRunning = false;
+            endGame("Tu as perdu toutes tes vies !");
+            return;
+          }
+          updateUI();
         }
-        updateUI();
         spawnBlock(speed);
       }, speed);
     }
 
     function startGame() {
       showPage('game');
+      lives = parseInt(localStorage.getItem("lives") || "3"); // Reset vies à stockées (ne pas reset à 3)
       score = 0;
       updateUI();
+      gameRunning = false;
       let countdown = 3;
       const countdownEl = document.getElementById("countdown");
       countdownEl.textContent = countdown;
+
       const countdownInterval = setInterval(() => {
         countdown--;
         if (countdown === 0) {
           clearInterval(countdownInterval);
           countdownEl.textContent = "";
+          gameRunning = true;
           spawnBlock(difficulties[selectedDifficulty]);
         } else {
           countdownEl.textContent = countdown;
@@ -244,9 +270,15 @@
     }
 
     function endGame(msg) {
-      if (msg) alert("Game Over : " + msg);
       clearTimeout(gameTimer);
+      currentBlock?.remove();
+      gameRunning = false;
       saveState();
+      if (msg) alert(`Game Over : ${msg}\n\nScore final : ${score}\nTrophées gagnés : ${score * multiplier}`);
+      // Ajoute les trophées gagnés pendant la partie
+      trophies += score * multiplier;
+      saveState();
+      updateUI();
       showPage('home');
     }
 
@@ -297,6 +329,7 @@
   </script>
 </body>
 </html>
+
 
 
 
