--- a/index.html
+++ b/index.html
@@ -1,233 +1,337 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Blokz Reflex - Mode Local Partage</title>
-<style>
-  body, html {
-    margin: 0; padding: 0; height: 100%; background: #121212; color: #eee; font-family: Arial, sans-serif;
-    display: flex; flex-direction: column; align-items: center; justify-content: center;
-  }
-  .page {
-    display: none;
-    width: 100vw; height: 100vh;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  .active {
-    display: flex !important;
-  }
-  button {
-    background: #00ffc8; border: none; padding: 15px 30px; margin: 15px; border-radius: 10px;
-    font-weight: bold; font-size: 1.2rem; color: #000; cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  button:hover {
-    background: #00e0b0;
-  }
+  <meta charset="UTF-8" />
+  <title>Blokz Reflex</title>
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', sans-serif; }
+    body { background: linear-gradient(to bottom right, #1f1f1f, #000); color: white; overflow: hidden; }
 
-  /* Ecran partage */
-  #localGame {
-    display: none;
-    flex-direction: row;
-    height: 100vh;
-    width: 100vw;
-  }
-  #player1Area, #player2Area {
-    flex: 1;
-    position: relative;
-    background: #222;
-    border: 3px solid #00ffc8;
-    margin: 5px;
-    border-radius: 15px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  #player2Area {
-    border-color: #ff6a6a;
-  }
-  h2 {
-    margin: 15px 0 10px 0;
-    user-select: none;
-  }
-  .gameArea {
-    flex: 1;
-    width: 90%;
-    position: relative;
-    background: #111;
-    border-radius: 10px;
-    overflow: hidden;
-  }
-  .block {
-    position: absolute;
-    width: 60px;
-    height: 60px;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: transform 0.15s ease;
-  }
-  .block:hover {
-    transform: scale(1.3);
-  }
-  .red { background: #e74c3c; }
-  .blue { background: #3498db; }
-  .green { background: #2ecc71; }
-  .yellow { background: #f1c40f; }
+    .page { display: none; padding: 2rem; text-align: center; height: 100vh; }
+    .active { display: flex; flex-direction: column; justify-content: center; align-items: center; }
 
-  .scoreboard {
-    margin: 10px 0 15px 0;
-    font-size: 1.3rem;
-    user-select: none;
-  }
-  #quitBtn {
-    position: absolute;
-    top: 15px;
-    right: 15px;
-    background: #00ffc8;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 12px;
-    font-weight: bold;
-    color: #000;
-    cursor: pointer;
-    user-select: none;
-    z-index: 10;
-  }
-</style>
+    h1 { font-size: 3rem; color: #00ffc8; }
+
+    .btn {
+      margin: 1rem;
+      padding: 1rem 2rem;
+      font-size: 1.2rem;
+      background: #00ffc8;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+
+    .btn:hover { background: #00ccaa; }
+
+    #gameArea {
+      width: 100%;
+      max-width: 800px;
+      height: 80vh;
+      border: 2px solid #00ffc8;
+      margin: auto;
+      position: relative;
+      background: #111;
+      border-radius: 20px;
+      overflow: hidden;
+    }
+
+    .block {
+      width: 60px;
+      height: 60px;
+      position: absolute;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+
+    .gray { background: gray; }
+    .red { background: #ff4d4d; }
+    .blue { background: #4d94ff; }
+    .green { background: #4dff88; }
+    .yellow { background: #ffff4d; }
+
+    .hud {
+      display: flex;
+      justify-content: space-between;
+      width: 90%;
+      margin: 1rem auto;
+      font-size: 1.2rem;
+      flex-wrap: wrap;
+      gap: 1rem;
+    }
+
+    .topbar {
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+    }
+
+    .link-btn {
+      margin-left: 1rem;
+      background: transparent;
+      border: 1px solid #00ffc8;
+      color: #00ffc8;
+      padding: 0.5rem 1rem;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+
+    .store-item {
+      background: #222;
+      padding: 1rem;
+      margin: 1rem;
+      border-radius: 10px;
+      border: 1px solid #444;
+    }
+
+    .store-item h3 { margin-bottom: 0.5rem; }
+
+    .store-item button {
+      background: #00ffc8;
+      border: none;
+      padding: 0.5rem 1rem;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+
+    #countdown {
+      font-size: 5rem;
+      font-weight: bold;
+      margin-top: 2rem;
+    }
+  </style>
 </head>
 <body>
-
-<!-- MENU -->
-<div id="menu" class="page active">
-  <h1>Blokz Reflex</h1>
-  <button id="btnLocal">Mode Local</button>
-</div>
-
-<!-- ECRAN PARTAGE -->
-<div id="localGame" class="page">
-  <button id="quitBtn">Quitter</button>
-  <div id="player1Area">
-    <h2>Joueur 1</h2>
-    <div id="gameArea1" class="gameArea"></div>
-    <div class="scoreboard" style="color:#00ffc8;">
-      ❤️ <span id="lives1">3</span> | 🏆 <span id="trophies1">0</span> | Score: <span id="score1">0</span>
+  <!-- ACCUEIL -->
+  <div id="home" class="page active">
+    <h1>Blokz Reflex</h1>
+    <p>🎯 Clique sur les blocs colorés pour gagner des 🏆.</p>
+    <p>❌ Évite les blocs gris. Rater un bloc coloré = -1 ❤️</p>
+    <p>💾 Trophées et améliorations sont sauvegardés automatiquement.</p>
+    <button class="btn" onclick="chooseDifficulty('easy')">Facile</button>
+    <button class="btn" onclick="chooseDifficulty('medium')">Moyen</button>
+    <button class="btn" onclick="chooseDifficulty('impossible')">Impossible</button>
+    <button class="btn" onclick="goToLocal()">Local</button>
+    <div class="topbar">
+      <button class="link-btn" onclick="showPage('shop')">🏪 Boutique</button>
+      <button class="link-btn" onclick="showPage('profile')">👤 Profil</button>
     </div>
   </div>
-  <div id="player2Area">
-    <h2>Joueur 2</h2>
-    <div id="gameArea2" class="gameArea"></div>
-    <div class="scoreboard" style="color:#ff6a6a;">
-      ❤️ <span id="lives2">3</span> | 🏆 <span id="trophies2">0</span> | Score: <span id="score2">0</span>
+
+  <!-- ÉCRAN PRÊT -->
+  <div id="ready" class="page">
+    <h1>Tu es prêt ?</h1>
+    <p>Le jeu commence dès que tu appuies sur <strong>Commencer</strong>.</p>
+    <button class="btn" onclick="startGame()">Commencer</button>
+    <button class="btn" onclick="showPage('home')">Retour</button>
+  </div>
+
+  <!-- JEU -->
+  <div id="game" class="page">
+    <div class="hud">
+      <div>❤️ Vies : <span id="lives"></span></div>
+      <div>🏆 Trophées : <span id="trophies"></span></div>
+      <div>🔥 Multiplicateur : x<span id="multiplier"></span></div>
+      <div>📈 Score : <span id="score"></span></div>
+    </div>
+    <div id="countdown"></div>
+    <div id="gameArea"></div>
+    <div class="topbar">
+      <button class="link-btn" onclick="endGame()">🏠 Quitter</button>
     </div>
   </div>
-</div>
 
-<script>
-  const pages = ['menu', 'localGame'];
-  const btnLocal = document.getElementById('btnLocal');
-  const quitBtn = document.getElementById('quitBtn');
-  const localGame = document.getElementById('localGame');
+  <!-- BOUTIQUE -->
+  <div id="shop" class="page">
+    <h1>Boutique 🛒</h1>
+    <div class="store-item">
+      <h3>❤️ Vie Supplémentaire — 50 🏆</h3>
+      <button onclick="buyLife()">Acheter</button>
+    </div>
+    <div class="store-item">
+      <h3>🔥 Multiplicateur x<span id="shopMultiplier"></span> → x<span id="nextMultiplier"></span> — <span id="multiplierCost"></span> 🏆</h3>
+      <button onclick="upgradeMultiplier()">Améliorer</button>
+    </div>
+    <button class="btn" onclick="showPage('home')">Retour</button>
+  </div>
 
-  // Variables jeu local
-  let timers = [null, null];
-  let lives = [3,3];
-  let scores = [0,0];
-  let trophies = [0,0];
-  const colors = ['red','blue','green','yellow'];
-  const blockDuration = 2000; // durée du bloc avant disparition (ms)
+  <!-- PROFIL -->
+  <div id="profile" class="page">
+    <h1>Profil 👤</h1>
+    <p>🏆 Trophées : <span id="profileTrophies"></span></p>
+    <p>❤️ Vies : <span id="profileLives"></span></p>
+    <p>🔥 Multiplicateur : x<span id="profileMultiplier"></span></p>
+    <button class="btn" onclick="showPage('home')">Retour</button>
+  </div>
 
-  btnLocal.onclick = () => {
-    switchPage('localGame');
-    startLocalGame();
-  };
+  <script>
+    const pages = ["home", "ready", "game", "shop", "profile"];
+    const colors = ['red', 'blue', 'green', 'yellow'];
+    const difficulties = { easy: 3000, medium: 1500, impossible: 800 };
+    let gameTimer, currentBlock, selectedDifficulty = "easy";
+    let trophies = parseInt(localStorage.getItem("trophies") || "0");
+    let lives = parseInt(localStorage.getItem("lives") || "3");
+    let multiplier = parseInt(localStorage.getItem("multiplier") || "1");
+    let score = 0;
 
-  quitBtn.onclick = () => {
-    stopLocalGame();
-    switchPage('menu');
-  };
+    function showPage(id) {
+      pages.forEach(p => document.getElementById(p).classList.remove("active"));
+      // Désactive page local si ouverte
+      const localPage = document.getElementById("local");
+      if(localPage) localPage.classList.remove("active");
+      document.getElementById(id).classList.add("active");
+      if (id === 'profile') updateProfile();
+      if (id === 'shop') updateShop();
+    }
 
-  function switchPage(pageId) {
-    pages.forEach(p => {
-      document.getElementById(p).classList.remove('active');
-    });
-    document.getElementById(pageId).classList.add('active');
-  }
+    function chooseDifficulty(diff) {
+      selectedDifficulty = diff;
+      showPage('ready');
+    }
 
-  function startLocalGame() {
-    lives = [3,3];
-    scores = [0,0];
-    trophies = [0,0];
-    updateUI();
-    clearAreas();
-    spawnBlock(0);
-    spawnBlock(1);
-  }
+    function updateUI() {
+      document.getElementById("lives").textContent = lives;
+      document.getElementById("trophies").textContent = trophies;
+      document.getElementById("multiplier").textContent = multiplier;
+      document.getElementById("score").textContent = score;
+    }
 
-  function stopLocalGame() {
-    timers.forEach(t => clearTimeout(t));
-    clearAreas();
-  }
+    function spawnBlock(speed) {
+      const gameArea = document.getElementById("gameArea");
+      gameArea.innerHTML = "";
+      const block = document.createElement("div");
+      const isGray = Math.random() < 0.2;
+      block.className = "block " + (isGray ? "gray" : colors[Math.floor(Math.random() * colors.length)]);
+      block.style.top = Math.random() * (gameArea.clientHeight - 60) + "px";
+      block.style.left = Math.random() * (gameArea.clientWidth - 60) + "px";
 
-  function clearAreas() {
-    document.getElementById('gameArea1').innerHTML = '';
-    document.getElementById('gameArea2').innerHTML = '';
-  }
+      block.onclick = () => {
+        if (isGray) return endGame("Tu as cliqué un bloc gris !");
+        trophies += multiplier;
+        score++;
+        saveState();
+        updateUI();
+        clearTimeout(gameTimer);
+        spawnBlock(speed);
+      };
 
-  function updateUI() {
-    document.getElementById('lives1').textContent = lives[0];
-    document.getElementById('trophies1').textContent = trophies[0];
-    document.getElementById('score1').textContent = scores[0];
-    document.getElementById('lives2').textContent = lives[1];
-    document.getElementById('trophies2').textContent = trophies[1];
-    document.getElementById('score2').textContent = scores[1];
-  }
+      gameArea.appendChild(block);
+      currentBlock = block;
 
-  function spawnBlock(playerIndex) {
-    const area = document.getElementById('gameArea' + (playerIndex+1));
-    area.innerHTML = '';
+      gameTimer = setTimeout(() => {
+        if (!isGray) {
+          lives--;
+          if (lives <= 0) return endGame("Tu as perdu toutes tes vies !");
+        }
+        updateUI();
+        spawnBlock(speed);
+      }, speed);
+    }
 
-    const block = document.createElement('div');
-    const color = colors[Math.floor(Math.random()*colors.length)];
-    block.className = 'block ' + color;
-
-    // Position aléatoire dans la zone de jeu
-    const maxTop = area.clientHeight - 60;
-    const maxLeft = area.clientWidth - 60;
-    const top = Math.random() * maxTop;
-    const left = Math.random() * maxLeft;
-    block.style.top = top + 'px';
-    block.style.left = left + 'px';
-
-    block.onclick = () => {
-      scores[playerIndex]++;
-      trophies[playerIndex]++;
+    function startGame() {
+      showPage('game');
+      score = 0;
       updateUI();
-      clearTimeout(timers[playerIndex]);
-      spawnBlock(playerIndex);
-    };
+      let countdown = 3;
+      const countdownEl = document.getElementById("countdown");
+      countdownEl.textContent = countdown;
+      const countdownInterval = setInterval(() => {
+        countdown--;
+        if (countdown === 0) {
+          clearInterval(countdownInterval);
+          countdownEl.textContent = "";
+          spawnBlock(difficulties[selectedDifficulty]);
+        } else {
+          countdownEl.textContent = countdown;
+        }
+      }, 1000);
+    }
 
-    area.appendChild(block);
+    function endGame(msg) {
+      if (msg) alert("Game Over : " + msg + `\nScore final: ${score}\nTrophées gagnés: ${trophies}`);
+      clearTimeout(gameTimer);
+      saveState();
+      showPage('home');
+    }
 
-    // Timer disparition
-    timers[playerIndex] = setTimeout(() => {
-      lives[playerIndex]--;
-      updateUI();
-      if(lives[playerIndex] <= 0){
-        alert(`Joueur ${playerIndex+1} a perdu !\nScores:\nJoueur 1 : ${scores[0]}\nJoueur 2 : ${scores[1]}`);
-        stopLocalGame();
-        switchPage('menu');
-        return;
+    function saveState() {
+      localStorage.setItem("trophies", trophies);
+      localStorage.setItem("lives", lives);
+      localStorage.setItem("multiplier", multiplier);
+    }
+
+    function updateProfile() {
+      document.getElementById("profileTrophies").textContent = trophies;
+      document.getElementById("profileLives").textContent = lives;
+      document.getElementById("profileMultiplier").textContent = multiplier;
+    }
+
+    function updateShop() {
+      const nextMult = multiplier + 1;
+      const cost = nextMult * 100;
+      document.getElementById("shopMultiplier").textContent = multiplier;
+      document.getElementById("nextMultiplier").textContent = nextMult;
+      document.getElementById("multiplierCost").textContent = cost;
+    }
+
+    function buyLife() {
+      if (trophies >= 50) {
+        trophies -= 50;
+        lives++;
+        saveState();
+        updateUI();
+        updateShop();
+      } else {
+        alert("Pas assez de trophées !");
       }
-      spawnBlock(playerIndex);
-    }, blockDuration);
-  }
-</script>
+    }
 
+    function upgradeMultiplier() {
+      const cost = (multiplier + 1) * 100;
+      if (trophies >= cost) {
+        trophies -= cost;
+        multiplier++;
+        saveState();
+        updateUI();
+        updateShop();
+      } else {
+        alert("Pas assez de trophées !");
+      }
+    }
+
+    // --- NOUVEAU : Mode Local ---
+    function goToLocal() {
+      // Cache toutes les pages normales
+      pages.forEach(p => document.getElementById(p).classList.remove("active"));
+      // Crée ou affiche la page locale
+      let localPage = document.getElementById("local");
+      if (!localPage) {
+        localPage = document.createElement("div");
+        localPage.id = "local";
+        localPage.className = "page active";
+        localPage.style.flexDirection = "column";
+        localPage.style.justifyContent = "center";
+        localPage.style.alignItems = "center";
+        localPage.innerHTML = `
+          <h1>Partage</h1>
+          <p>Mode multijoueur local à venir !</p>
+          <button class="btn" onclick="backToHome()">Retour</button>
+        `;
+        document.body.appendChild(localPage);
+      } else {
+        localPage.classList.add("active");
+      }
+    }
+
+    function backToHome() {
+      const localPage = document.getElementById("local");
+      if(localPage) localPage.classList.remove("active");
+      showPage('home');
+    }
+  </script>
 </body>
 </html>
+
 
 
 
